Fix alignment of right side bar

--- a/styles.css
+++ b/styles.css
@@ -170,7 +170,7 @@ button {
 
 .main-sidebar {
     display: grid;
-    gap: 15px;
+    gap: 20px;
     grid-template-rows: 20px auto 20px auto;
 }
 
